--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="header">
-        <p class="header__logo"><img src="../IMG/logo.png" alt="logo"></p>
+        <p class="header__logo"><img src="./IMG/logo.png" alt="logo"></p>
         <h1 class="header__h1">Óptica Rositto</h1>
         <p class="header__p">Lentes de contacto</p>
         <div class="header__menu">
@@ -40,7 +40,7 @@
                     <div id="carouselExampleCaptions" class="carousel slide col-12 col-md-8" data-bs-ride="carousel">
                         <div  class="carousel-inner" class="editInner">
                         <div class="carousel-item active">
-                            <img src="../IMG/home1.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
+                            <img src="./IMG/home1.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
                             <div class="home1__textoCarousel" class="carousel-caption d-none d-md-block">
                                 <h2>Soluciones Integrales</h2>
                                 <p>
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="../IMG/home2.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
+                            <img src="./IMG/home2.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
                             <div class="home1__textoCarousel" class="carousel-caption d-none d-md-block">
                                 <h2>Una Optica Diferente</h2>
                                 <p>
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="../IMG/home3.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
+                            <img src="./IMG/home3.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
                             <div class="home1__textoCarousel" class="carousel-caption d-none d-md-block">
                                 <h2>Soluciones Integrales</h2>
                                 <p>
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="../IMG/home4.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
+                            <img src="./IMG/home4.jpg" class="d-block w-100" alt="Foto del interior de la óptica y sus productos">
                             <div class="home1__textoCarousel" class="carousel-caption d-none d-md-block">
                                 <h2>Una Optica Diferente</h2>
                                 <p>
@@ -99,10 +99,10 @@
                     </p><br>
                 </div>
                 <div class="home2__img col-12 col-md-6">
-                    <img src="../IMG/home5.jpg" alt="Foto del interior de la óptica">
+                    <img src="./IMG/home5.jpg" alt="Foto del interior de la óptica">
                 </div>
                 <div class="home2__img col-12 col-md-6">
-                    <img src="../IMG/home6.jpg" alt="Foto de la fachada de la óptica">
+                    <img src="./IMG/home6.jpg" alt="Foto de la fachada de la óptica">
                 </div>      
                 <div class="home2__texto col-12 col-md-6">
                     <h2>Tercera Generación de Ópticos</h2>
