--- a/optiplus.html
+++ b/optiplus.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header class="header">
-        <p class="header__logo"><img src="../IMG/logo.png" alt="logo"></p>
+        <p class="header__logo"><img src="./IMG/logo.png" alt="logo"></p>
         <h1 class="header__h1">Óptica Rositto</h1>
         <p class="header__p">Lentes de contacto</p>
         <div class="header__menu">
@@ -48,7 +48,7 @@
         <section class="oplus2 container">
             <div class="row">
                 <div class="oplus2__img col-12 col-md-6">
-                    <img src="../IMG/optiplus1.jpg" alt="interior de la optica">
+                    <img src="./IMG/optiplus1.jpg" alt="interior de la optica">
                 </div>
                 <div class="oplus2__texto col-12 col-md-6">
                     <h2>Descuentos en Nuestros Productos</h2><br>
@@ -57,10 +57,10 @@
                     <h2>Descuentos en Centros Oftalmológicos asociados</h2><br>
                 </div>
                 <div class="oplus2__img col-12 col-md-6">
-                    <img src="../IMG/optiplus2.jpg" alt="fachada de un centro oftalmológico">
+                    <img src="./IMG/optiplus2.jpg" alt="fachada de un centro oftalmológico">
                 </div>
                 <div class="oplus2__img col-12 col-md-6">
-                    <img src="../IMG/optiplus3.jpg" alt="interior de la optica">
+                    <img src="./IMG/optiplus3.jpg" alt="interior de la optica">
                 </div>
                 <div class="oplus2__texto col-12 col-md-6">
                     <h2>Reparaciones sin cargo, Regalos y más!</h2><br>
