--- a/sucursales.html
+++ b/sucursales.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class="header">
-        <p class="header__logo"><img src="../IMG/logo.png" alt="logo"></p>
+        <p class="header__logo"><img src="./IMG/logo.png" alt="logo"></p>
         <h1 class="header__h1">Óptica Rositto</h1>
         <p class="header__p">Lentes de contacto</p>
         <div class="header__menu">
