--- a/turnos.html
+++ b/turnos.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <p class="header__logo"><img src="../IMG/logo.png" alt="logo"></p>
+        <p class="header__logo"><img src="./IMG/logo.png" alt="logo"></p>
         <h1 class="header__h1">Óptica Rositto</h1>
         <p class="header__p">Lentes de contacto</p>
         <div class="header__menu">
@@ -37,7 +37,7 @@
         <section class="turnos"><br>
             <h2 class="turnos__h2">¡Volvió la atención presencial!</h2><br>
             <p><strong>¡Es bueno volvernos a ver!</strong></p> <br>
-            <img class="turnos__img" src="../IMG/barbijo_pulgar.jpg" alt="mujer con barbijo levantando el pulgar"> <br> <br>
+            <img class="turnos__img" src="./IMG/barbijo_pulgar.jpg" alt="mujer con barbijo levantando el pulgar"> <br> <br>
             <p class="turnos__p">
                 Después de varios meses atendiendo de manera remota <br>
                  A partir del <strong>22 de Junio</strong> podrás volver a visitarnos!  <br>
